--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,29 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <div class="card bg-dark my-5">
-        <div class="card-body">
-          <h2 class="card-title text-center text-white py-3">{{ title }}</h2>
-          <ul class="text-center list-inline py-3">
-            <li class="list-inline-item">
-              <a routerLink="/account" class="btn btn-info">List Accounts</a>
-            </li>
-            <li class="list-inline-item">
-              <a routerLink="/addaccount" class="btn btn-info">Add Account</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <router-outlet></router-outlet>
-    </div>
+<div class="dashboard">
+
+  <div class="card card-body bg-dark my-2">
+      <h2 class="card-title text-center text-white">{{ title }}</h2>
   </div>
+
+  <!-- <nav>
+    <ul class="text-center list-inline py-3">
+      <li class="list-inline-item">
+        <a routerLink="/account" class="btn btn-info">List Accounts</a>
+      </li>
+      <li class="list-inline-item">
+        <a routerLink="/addaccount" class="btn btn-info">Add Account</a>
+      </li>
+    </ul>
+  </nav> -->
+
+  <div class="row">
+    <app-accounts-list class="col-4"></app-accounts-list>
+    <div class="col-4">
+      <app-cash-flow></app-cash-flow>
+      <app-cash-flow></app-cash-flow>
+    </div>
+    <app-market-movers class="col-4"></app-market-movers>
+  </div>
+
+  <router-outlet></router-outlet>
+
 </div>
