accounts sidebar ui changes

--- a/src/app/accounts-list/accounts-list.component.html
+++ b/src/app/accounts-list/accounts-list.component.html
@@ -1,18 +1,23 @@
 <div class="card my-1">
   
   <div class="card-body">
-    <h2>Accounts</h2>
-
-    <button class="btn btn-info my-2">Manage Accounts</button>
-    <br>
+    <div class="d-flex flex-row bd-highlight mb-3" >
+      <h2 class="font-weight-bold " >Accounts</h2>
+      <button class="btn btn-info my-2 font-weight-bold ml-auto">Manage Accounts</button>
+    </div>
+    <hr>
     <h4>Networth: {{netWorth | currency}}</h4>
-    
+    <!-- <hr> -->
     <br>
-    <div><h5 class="font-weight-bold">Cash</h5></div>
+    <div class="d-flex flex-row bd-highlight mb-3">
+      <h5 class="font-weight-bold mr-auto">Cash </h5>
+      <h5 class="font-weight-bold ml-auto"> ${{cashValue}}</h5>
+
+    </div>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
-        <th scope="col">Name</th>
+        <th scope="col">Name</th> 
         <th scope="col">Amount</th>
       </tr>
       </thead>
@@ -25,7 +30,10 @@
     </table>
 
     <br>
-    <div><h5 class="font-weight-bold">Investments</h5></div>
+    <div class="d-flex flex-row bd-highlight mb-3" >
+      <h5 class="font-weight-bold mr-auto" >Investments</h5>
+      <h5 class="font-weight-bold ml-auto"> ${{investmentValue}}</h5>
+    </div>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
