--- a/src/app/accounts-list/accounts-list.component.html
+++ b/src/app/accounts-list/accounts-list.component.html
@@ -2,7 +2,7 @@
   
   <div class="card-body">
     <div class="d-flex flex-row bd-highlight mb-3" >
-      <h2 class="font-weight-bold " >Accounts</h2>
+      <h2 class="font-weight-bold" >Accounts</h2>
       <button class="btn btn-info my-2 font-weight-bold ml-auto">Manage Accounts</button>
     </div>
     <hr>
@@ -13,6 +13,11 @@
           palette="bright"
           [dataSource]="netWorthChartInfo"
           [resolveLabelOverlapping]="resolveOverlappingTypes[1]">
+          <!-- <dxo-title>
+            <dxo-font
+                color="black">
+            </dxo-font>
+          </dxo-title> -->
           <dxo-margin [bottom]="20"></dxo-margin>
           <dxo-legend [visible]="true">
             <dxo-font [size]="20"></dxo-font>
@@ -33,10 +38,10 @@
 
     <br>
     <div class="d-flex flex-row bd-highlight mb-3">
-      <h5 class="font-weight-bold mr-auto">Cash </h5>
-      <h5 class="font-weight-bold ml-auto"> ${{cashValue}}</h5>
-
+      <h4 class="font-weight-bold mr-auto">Cash </h4>
+      <h4 class="font-weight-bold ml-auto"> ${{cashValue}}</h4>
     </div>
+    <hr>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
@@ -54,9 +59,10 @@
 
     <br>
     <div class="d-flex flex-row bd-highlight mb-3" >
-      <h5 class="font-weight-bold mr-auto" >Investments</h5>
-      <h5 class="font-weight-bold ml-auto"> ${{investmentValue}}</h5>
+      <h4 class="font-weight-bold mr-auto" >Investments</h4>
+      <h4 class="font-weight-bold ml-auto"> ${{investmentValue}}</h4>
     </div>
+    <hr/>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
