--- a/src/app/market-movers/market-movers.component.html
+++ b/src/app/market-movers/market-movers.component.html
@@ -1,13 +1,33 @@
 <div class="card my-1">
   
   <div class="card-body">
-    <h2>Market Movers</h2>
+    <h2 class="font-weight-bold">Market Movers</h2>
     <br>
 
     <h5 class="font-weight-bold">Indices</h5>
     <br>
 
     <h5 class="font-weight-bold">Top 5 gainers</h5>
+    <div class="d-flex flex-row bd-highlight mb-3">
+      <h4 class="font-weight-bold mr-auto">Cash </h4>
+      <h4 class="font-weight-bold ml-auto"> cashValue</h4>
+    </div>
+    <hr>
+    <table class="table table-striped">
+      <thead class="thead-dark">
+      <tr>
+        <th scope="col">Symbol</th> 
+        <th scope="col">Gain</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr *ngFor="let s of topGainersSecurities">
+        <td>{{ s.symbol }}</td>
+        <td>{{ s.current_cost | currency }}</td>
+      </tr>
+      </tbody>
+    </table>
+
     <br>
 
     <h5 class="font-weight-bold">Top 5 losers</h5>
