--- a/src/app/accounts-list/accounts-list.component.html
+++ b/src/app/accounts-list/accounts-list.component.html
@@ -7,17 +7,12 @@
     </div>
     <hr>
     <!-- <hr> -->
-    <div id="chart-demo">
+    <!-- <div id="chart-demo">
       <dx-pie-chart #pie
           [title]="'Net Worth: $'+ netWorth"
           palette="bright"
           [dataSource]="netWorthChartInfo"
           [resolveLabelOverlapping]="resolveOverlappingTypes[1]">
-          <!-- <dxo-title>
-            <dxo-font
-                color="black">
-            </dxo-font>
-          </dxo-title> -->
           <dxo-margin [bottom]="20"></dxo-margin>
           <dxo-legend [visible]="true">
             <dxo-font [size]="20"></dxo-font>
@@ -34,7 +29,7 @@
               </dxo-label>
           </dxi-series>
       </dx-pie-chart>
-  </div>
+  </div> -->
 
     <br>
     <div class="d-flex flex-row bd-highlight mb-3">
