currently working with all components

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <app-accounts-list class="col-4"></app-accounts-list>
   <div class="col-4">
-    <app-cash-flow></app-cash-flow>
+    <app-summary-overview></app-summary-overview>
     <app-cash-flow></app-cash-flow>
   </div>
   <app-market-movers class="col-4"></app-market-movers>
