--- a/src/app/summary-overview/summary-overview.component.html
+++ b/src/app/summary-overview/summary-overview.component.html
@@ -1,10 +1,16 @@
 <div class="card my-1">
   
   <div class="card-body">
-    <h2>Summary Overview</h2>
+    <h2 class='font-weight-bold'>Summary Overview</h2>
+    <hr>
 
     <div>
-      <canvas id="myChart"></canvas>
+      <br>
+      <h4 class="ml-auto">Net Worth: {{netWorth | currency}}</h4>
+      <h4 class="ml-auto">Cash: {{cashValue/netWorth*100 | number : '1.2-2'}}%</h4>
+      <h4 class="ml-auto">Investment: {{investmentValue/netWorth*100 | number : '1.2-2'}}%</h4>
+      <br>
+      <canvas id="summaryChart"></canvas>
     </div>
     
   </div>
