--- a/src/app/account-overview/account-overview.component.html
+++ b/src/app/account-overview/account-overview.component.html
@@ -1,7 +1,7 @@
 <div class="card my-1">
   <div class="card-body">
     <div class="d-flex flex-row bd-highlight mb-3" >
-      <h2 class="font-weight-bold" >[Account Name] Overview</h2>
+      <h2 class="font-weight-bold" >{{currAccount.name}} Overview</h2>
     </div>
     <hr>
     <br>
@@ -11,29 +11,65 @@
     </div>
     <div class="d-flex flex-row bd-highlight mb-3">
       <h4 class="font-weight-bold mr-auto">Amount </h4>
-      <h4 class="font-weight-bold ml-auto"> $1</h4>
+      <h4 class="font-weight-bold ml-auto"> {{currAccount.amount|currency}}</h4>
     </div>
     <div class="d-flex flex-row bd-highlight mb-3">
       <h4 class="font-weight-bold mr-auto">Type </h4>
-      <h4 class="font-weight-bold ml-auto"> $1</h4>
+      <h4 class="font-weight-bold ml-auto"> {{currAccount.type}}</h4>
     </div>
     
-    <hr>
-    <!-- <table class="table table-striped">
-      <thead class="thead-dark">
-      <tr>
-        <th scope="col">Name</th> 
-        <th scope="col">Amount</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let c of currAccount.securitiesList">
-        <td>{{ c.id }}</td>
-        <td>{{ c.symbol | currency }}</td>
-      </tr>
-      </tbody>
-    </table> -->
+    <!-- <hr> -->
+    <!-- Securities Table -->
+    <div *ngIf="isInvestmentAccount">
+      <div class="d-flex flex-row bd-highlight mb-3">
+        <h4 class="font-weight-bold mr-auto">Current Security Holdings </h4>
+      </div>
+      <table class="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+          <th scope="col">Ticker Symbol</th>
+          <th scope="col">Holdings</th> 
+          <th scope="col">Closing Cost</th> 
+          <th scope="col">Current Price</th> 
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let c of currAccount.securitiesList">
+          <td>{{ c.symbol }}</td>
+          <td>{{ c.holdings }}</td>
+          <td>{{ c.closing_cost | currency }}</td>
+          <td>{{ c.current_cost | currency }}</td>
+        </tr>
+        </tbody>
+      </table>
+      <div class="d-flex flex-row bd-highlight mb-3 justify-content-end">
+        <button class="btn-lg btn-primary ">Buy/Sell Securities</button>
+      </div>
+    </div>
 
+    <!-- Transactions Table -->
+    <div *ngIf="!isInvestmentAccount">
+      <div class="d-flex flex-row bd-highlight mb-3">
+        <h4 class="font-weight-bold mr-auto">Recent Transactions </h4>
+      </div>
+      <table class="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+          <th scope="col">Transaction Date</th>
+          <th scope="col">Amount</th> 
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let c of history">
+          <td>{{ c.transactionDate }}</td>
+          <td>{{ c.amount }}</td>
+        </tr>
+        </tbody>
+      </table>
+      <div class="d-flex flex-row bd-highlight mb-3 justify-content-end">
+        <button class="btn-lg btn-primary ">Deposit/Withdraw</button>
+      </div>
+    </div>
     <br>
   </div>
 </div>
