investment overview, colour changes, attempt at homepage placement

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,8 +1,10 @@
 <div class="row">
-  <app-accounts-list class="col-4"></app-accounts-list>
   <div class="col-4">
     <app-summary-overview></app-summary-overview>
-    <app-cash-flow></app-cash-flow>
+    <app-accounts-list></app-accounts-list>
   </div>
-  <app-market-movers class="col-4"></app-market-movers>
+  <div class="col-5">
+    <app-investment-overview></app-investment-overview>
+  </div>
+  <app-market-movers class="col-3"></app-market-movers>
 </div>
