loser to Losers, minor <hr> changes

--- a/src/app/market-movers/market-movers.component.html
+++ b/src/app/market-movers/market-movers.component.html
@@ -2,10 +2,10 @@
   
   <div class="card-body">
     <h2 class="font-weight-bold">Market Movers</h2>
+    <hr>
     <br>
 
     <h5 class="font-weight-bold">Top 5 Gainers</h5>
-    <hr>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
@@ -23,8 +23,9 @@
 
     <br>
 
-    <h5 class="font-weight-bold">Top 5 losers</h5>
     <hr>
+    <br>
+    <h5 class="font-weight-bold">Top 5 Losers</h5>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
