--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,10 @@
 <div class="dashboard">
 
   <div class="card card-body bg-dark my-2">
-      <h1 class="card-title text-center text-white">{{ title }}</h1>
-      <hr>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-secondary bg-gradient navbarText rounded">
+      <nav class="navbar navbar-expand-lg navbar-dark navbarText rounded">
+        <h1 class="card-title text-center text-white">{{ title }}</h1>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item mr-5" routerLinkActive="active" [routerLinkActiveOptions]="{exact:'true'}">
               <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
             </li>
