--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -5,6 +5,9 @@
   </div>
   <div class="col-5">
     <app-investment-overview></app-investment-overview>
+    <app-history-chart></app-history-chart>
   </div>
-  <app-market-movers class="col-3"></app-market-movers>
+
+
+  <app-market-movers class="col-3"></app-market-movers>?
 </div>
