--- a/src/app/market-movers/market-movers.component.html
+++ b/src/app/market-movers/market-movers.component.html
@@ -5,7 +5,7 @@
     <hr>
     <br>
 
-    <h5 class="font-weight-bold">Top 5 Gainers</h5>
+    <h5 class="font-weight-bold">Top Gainers</h5>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
@@ -25,7 +25,7 @@
 
     <hr>
     <br>
-    <h5 class="font-weight-bold">Top 5 Losers</h5>
+    <h5 class="font-weight-bold">Top Losers</h5>
     <table class="table table-striped">
       <thead class="thead-dark">
       <tr>
