--- a/src/app/account-overview/account-overview.component.html
+++ b/src/app/account-overview/account-overview.component.html
@@ -62,7 +62,7 @@
         <tbody>
         <tr *ngFor="let c of history">
           <td>{{ c.transactionDate }}</td>
-          <td>{{ c.amount }}</td>
+          <td [ngClass]="{'positiveAmount': c.amount>=0, 'negativeAmount': c.amount<0}" >{{ c.amount }}$</td>
         </tr>
         </tbody>
       </table>
@@ -77,7 +77,7 @@
 <br>
 <!-- Deposit/WithDraw Form for Cash Accounts -->
 <div class="card my-1" *ngIf="!isInvestmentAccount" [hidden]="!showDepositWithdrawForm">
-  <div class="card-body">
+  <div class="card-body bg-dark text-light">
     <div class="d-flex flex-row bd-highlight mb-3" >
       <h2 class="font-weight-bold mr-auto" >{{currAccount.name}}: Deposit/Withdraw</h2>
       <button class="btn btn-danger ml-auto" (click)="onCancelForm()">Cancel</button>
@@ -85,7 +85,7 @@
     <form [formGroup]="depositWithdrawForm" (ngSubmit)="onSubmitDepositWithdraw()">
       <!-- <div formGroupName="userData"> -->
         <div class="form-group" >
-          <label for="account_name">Account Name</label>
+          <label class="inputLabel" for="account_name">Account Name</label>
           <input
             type="text"
             id="account_name"
@@ -100,9 +100,10 @@
             >
             </span>
         </div>
-        <p>Transaction Type:</p>
+        <br>
+        <p class="inputLabel">Transaction Type</p>
         <div class="radio" *ngFor="let option of cashAccOptions">
-          <label>
+          <label >
             <input
               type="radio"
               [value]="option"
@@ -110,8 +111,9 @@
             >{{ option }}
           </label>
         </div>
+        <br>
         <div class="form-group">
-          <label for="amount">Amount</label>
+          <label for="amount" class="inputLabel">Amount</label>
           <input
             type="number"
             id="amount"
@@ -135,6 +137,7 @@
           </span>
         </div>
       <!-- </div> -->
+      <br>
       <button class="btn btn-success" type="submit" [disabled]="!depositWithdrawForm.valid">Submit</button>
     </form>
   </div>
