--- a/src/app/summary-overview/summary-overview.component.html
+++ b/src/app/summary-overview/summary-overview.component.html
@@ -4,11 +4,11 @@
     <h2 class='font-weight-bold'>Summary Overview</h2>
     <hr>
 
-    <div>
+    <div class="text-center">
       <br>
-      <h5 class="ml-auto">Net Worth: {{netWorth | currency}}</h5>
-      <h5 class="ml-auto">Cash: {{cashValue/netWorth*100 | number : '1.2-2'}}%</h5>
-      <h5 class="ml-auto">Investment: {{investmentValue/netWorth*100 | number : '1.2-2'}}%</h5>
+      <h3 class="ml-auto">Net Worth: {{netWorth | currency}}</h3>
+      <h3 class="ml-auto">Cash: {{cashValue/netWorth*100 | number : '1.2-2'}}%</h3>
+      <h3 class="ml-auto">Investment: {{investmentValue/netWorth*100 | number : '1.2-2'}}%</h3>
       <br>
       <canvas id="summaryChart"></canvas>
     </div>
